Fixed table overflow issue on mobiles

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -73,7 +73,8 @@ html {
   clear: both;
 }
 .vgt-responsive {
-  @apply w-full relative;
+  @apply overflow-x-auto w-full relative;
+  min-height: 220px;
 }
 .vgt-text-disabled {
   @apply text-grey-300;
